--- a/index.html
+++ b/index.html
@@ -122,23 +122,23 @@
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/tali-scheer.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/tali-scheer-index.jpg" class="attachment-blog-thumb wp-post-image" alt="Tali Scheer">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/tali-scheer.html">Tali Scheer</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"Life is rarely about math and mostly the opportunity to throw snowballs."</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p> VP of Marketing and Design for Baby K'tan, LLC. to Software Engineering student </p>
                 </div>
                 <div class="clear"></div>
               </li>
@@ -190,7 +190,7 @@
                 <div class="excerpt">
                   <p>Excerpt.</p>
                 </div>
-                <div class="clear"></div> 
+                <div class="clear"></div>
               </li>
               <!-- End Student 4 -->
 
